<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.expensetracker.budgettracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.expensetracker.budgettracker.ui.dashboard.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.expensetracker.budgettracker.ui.notifications.BudgetFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget" />

</navigation>